--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,14 +4,16 @@
   // 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
+
     {
       "type": "pwa-node",
       "request": "launch",
-      "name": "Launch Program",
+      "name": "Cli Add Task",
       "skipFiles": [
         "<node_internals>/**"
       ],
-      "program": "${workspaceFolder}\\index.js"
+      "program": "${workspaceFolder}\\cli.js",
+      "args": ["add","task","100"]
     }
   ]
 }
