--- a/package.json
+++ b/package.json
@@ -1,16 +1,24 @@
 {
   "name": "node-todo-lucy",
-  "bin":{
-    "t":"cli.js"
+  "bin": {
+    "t": "cli.js"
   },
-  "files":[
-    "cli.js","db.js","index.js"
+  "files": [
+    "cli.js",
+    "db.js",
+    "index.js"
   ],
   "version": "0.0.1",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "test": "jest"
+  },
   "dependencies": {
     "commander": "^3.0.2",
     "inquirer": "^8.2.0"
+  },
+  "devDependencies": {
+    "jest": "^27.5.1"
   }
 }
